--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,7 @@ databases:
 services:
   - type: web
     plan: free
-    name: youtubeplayer_django
+    name: youtubeplayer_django_api
     runtime: python
     buildCommand: "./build.sh"
     startCommand: "python -m gunicorn youtubeplayer.asgi:application -k uvicorn.workers.UvicornWorker"
