--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,12 @@ Django==5.0.7
 django-cors-headers==4.4.0
 django-filter==24.2
 djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
 gunicorn==22.0.0
 h11==0.14.0
 packaging==24.1
 psycopg2-binary==2.9.9
+PyJWT==2.9.0
 sqlparse==0.5.0
 typing_extensions==4.12.2
 uvicorn==0.30.1
